Added redactedhub to index page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
 <p>Welcome to the place where I keep all my projects and stuff. Mostly for garrysmod. Mostly lua, maybe Unity/C# in future.</p>
       </section>
+      <section>
+        <h1>RedactedHub</h1>
+        <p>RedactedHub is a server hub addon for garrysmod servers. Works with TTT, DarkRP, Murder, PropHunt, Deathrun, Bhop, and probably all the other gamemodes as long as they don't mess with player spawnings. I'm doing my best to keep it supporting all different gamemodes. DarkRP has real issues for some reason and I don't know why.<a href="https://github.com/Arizard/redactedhub">Click here to check out RedactedHub!</a></p>
+      </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
