--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Arizard.GitHub.io by Arizard</title>
+    <title>Arizard&#39;s Github by Arizard</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Arizard.GitHub.io</h1>
-        <p>Arizards stuff</p>
+        <h1>Arizard&#39;s Github</h1>
+        <p>Projects by Arizard</p>
 
 
         <p class="view"><a href="https://github.com/Arizard">View My GitHub Profile</a></p>
@@ -24,13 +24,66 @@
       </header>
       <section>
         <h1>
-<a id="arizards-stuff" class="anchor" href="#arizards-stuff" aria-hidden="true"><span class="octicon octicon-link"></span></a>Arizard's Stuff</h1>
+<a id="arizards-projects" class="anchor" href="#arizards-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Arizard's Projects</h1>
 
 <p>Welcome to the place where I keep all my projects and stuff. Mostly for garrysmod. Mostly lua, maybe Unity/C# in future.</p>
-      </section>
-      <section>
-        <h1>RedactedHub</h1>
-        <p>RedactedHub is a server hub addon for garrysmod servers. Works with TTT, DarkRP, Murder, PropHunt, Deathrun, Bhop, and probably all the other gamemodes as long as they don't mess with player spawnings. I'm doing my best to keep it supporting all different gamemodes. DarkRP has real issues for some reason and I don't know why.<a href="https://github.com/Arizard/redactedhub">Click here to check out RedactedHub!</a></p>
+
+<h1>
+<a id="redactedhub" class="anchor" href="#redactedhub" aria-hidden="true"><span class="octicon octicon-link"></span></a>RedactedHub</h1>
+
+<p>Redactedhub is a multi-purpose server hub which I created for my community. It features a point system, item store (cosmetic and augmenting), jukebox (using youtube videos as the source), a donation link, as well as 2 spare panels in which I hope to add item trading and an admin control panel.</p>
+
+<p>RedactedHub differs from other pointstores due to the way items are stored. Each item is an individual row in a table, and each row has a specified owner. This means that it is possible to have a limited number of units of each item, improving a server's point economy. Once a limit for a certain item is reached, there can be no more sold, thus causing the players to trade the item at a higher value as demand increases. Points are also finite, which means that the store starts off with a certain amount of cash, and as points are given out, cash in the store is depleted - there is a limit where the store can no longer give out points, and the players will need to trade between eachother or purchase more items from the store, causing points to increase in value due to them being harder to obtain.</p>
+
+<p>The jukebox features a playlist (which changes depending on the server you are on) and a queue, which stores songs that you have added from the playlist. If a song is added to your queue, you will still be able to listen to it if you join another server with RedactedHub installed - the queue is stored on your client and remains the same regardless of the server you are on.</p>
+
+<h1>
+<a id="scriptfoddder" class="anchor" href="#scriptfoddder" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scriptfoddder</h1>
+
+<p>I have released a number of addons on scriptfodder so far:</p>
+
+<h2>
+<a id="doorskin" class="anchor" href="#doorskin" aria-hidden="true"><span class="octicon octicon-link"></span></a>doorSkin</h2>
+
+<p>doorSkin provides an intuitive interface for new DarkRP players to change the appearance of the doors they own!</p>
+
+<p>It only takes a few seconds! doorSkin allows you and your friends to enhance their roleplay immersion and decorate their bases! It's sure to keep players sticking around!</p>
+
+<p>Formerly, only administrators with access to world props were able to customize the appearance of their doors. Now, with doorSkin, any player can edit the appearance of any door they own!</p>
+
+<p>Choose steel doors with pushbars for warehouses and industrial complexes!</p>
+
+<p>Varnished wooden doors with tasteful iron handles for the Mayor's office!</p>
+
+<p>Dingy, scrappy plywood doors for those crafty Hobo shacks and slum areas!</p>
+
+<p><a href="https://scriptfodder.com/scripts/view/1110">doorSkin on ScriptFodder</a></p>
+
+<h2>
+<a id="doorhandle" class="anchor" href="#doorhandle" aria-hidden="true"><span class="octicon octicon-link"></span></a>doorHandle</h2>
+
+<p>Have you ever wanted more out of your doors? Is the default DarkRP labeling system just not that appealing? Do you and your players want improved customization for gun stores, bars, restaurants and garages?</p>
+
+<p>The tried-and-true 3D2D door label just received an upgrade - doorHandle.</p>
+
+<p>doorHandle is an intuitive new addon which improves the appearance of the default DarkRP door labels, while providing extra customization for all players and all doors! Not only does it let players customize their bases, but it's eye-catching aesthetic is sure to garner the attention of new players and keep them sticking around!</p>
+
+<p>doorHandle allows players to edit the color, scale, and font of their door labels, and puts them in control of how their base looks.</p>
+
+<p><a href="https://scriptfodder.com/scripts/view/1120">doorHandle on ScriptFodder</a></p>
+
+<h1>
+<a id="bodygroupr" class="anchor" href="#bodygroupr" aria-hidden="true"><span class="octicon octicon-link"></span></a>bodyGroupr</h1>
+
+<p>Too often have we needed to sit down and wait for hundreds of megabytes of playermodels to download. It's a pain, and we're sick of it.</p>
+
+<p>But what if we didn't have to? What if there was an addon that allowed us to unlock the full potential of many workshop playermodel packs?</p>
+
+<p>Bodygroups, if you haven't heard of them by now, are small changes to a playermodel's appearance (such as clothing) which are included within the model's files. Rather than having separate playermodels for each different item of clothing, bodygroups allow you to interchange, switch, swap, and shuffle your playermodel's appearance to any combination you desire.</p>
+
+<p>When using bodyGroupr, these bodygroups are no longer locked away in the code, and can be accessed freely by the players. This way, you (the owner) can minimize the disk space and network bandwidth that gets wasted each time a new player joins!</p>
+
+<p><a href="https://scriptfodder.com/scripts/view/1217">bodyGroupr on ScriptFodder</a></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
