Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>The jukebox features a playlist (which changes depending on the server you are on) and a queue, which stores songs that you have added from the playlist. If a song is added to your queue, you will still be able to listen to it if you join another server with RedactedHub installed - the queue is stored on your client and remains the same regardless of the server you are on.</p>
 
 <h1>
-<a id="scriptfoddder" class="anchor" href="#scriptfoddder" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scriptfoddder</h1>
+<a id="scriptfodder" class="anchor" href="#scriptfodder" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scriptfodder</h1>
 
 <p>I have released a number of addons on scriptfodder so far:</p>
 
@@ -72,8 +72,8 @@
 
 <p><a href="https://scriptfodder.com/scripts/view/1120">doorHandle on ScriptFodder</a></p>
 
-<h1>
-<a id="bodygroupr" class="anchor" href="#bodygroupr" aria-hidden="true"><span class="octicon octicon-link"></span></a>bodyGroupr</h1>
+<h2>
+<a id="bodygroupr" class="anchor" href="#bodygroupr" aria-hidden="true"><span class="octicon octicon-link"></span></a>bodyGroupr</h2>
 
 <p>Too often have we needed to sit down and wait for hundreds of megabytes of playermodels to download. It's a pain, and we're sick of it.</p>
 
