--- a/vhs7.html
+++ b/vhs7.html
@@ -5,6 +5,7 @@ body {
   background-image: url("http://i.imgur.com/cYXgQG4.jpg");
   background-color: #000;
   background-size: fill;
+  background-position-x: 55%; 
 
   animation: glitch 10s infinite;
   animation-timing-function: linear;
@@ -93,7 +94,7 @@ body {
 
 </style>
 </head><body>
-	<img class="logo" src="http://i.imgur.com/oeStEui.png">
+	<img class="logo" src="http://i.imgur.com/Jr92dzS.png">
 	<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
 	<img class="moving-scanline" width="100%" height="110%" src="http://i.imgur.com/JicOwjF.png">
 </body></html>
