--- a/vhs7.html
+++ b/vhs7.html
@@ -4,7 +4,7 @@ body {
   overflow: hidden;
   background-image: url("http://i.imgur.com/cYXgQG4.jpg");
   background-color: #000;
-  background-size: fill;
+  background-size: cover;
   background-position-x: 55%; 
 
   animation: glitch 10s infinite;
