--- a/sauke.html
+++ b/sauke.html
@@ -95,6 +95,6 @@ body {
 </style>
 </head><body>
 	<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
-	<img class="logo" src="http://i.imgur.com/Jr92dzS.png">
+	<img class="logo" src="http://i.imgur.com/jhys3mN.png">
 	<img class="moving-scanline" width="100%" height="110%" src="http://i.imgur.com/JicOwjF.png">
 </body></html>
