--- a/deathruninfo.html
+++ b/deathruninfo.html
@@ -321,7 +321,7 @@ kbd {
 }</style>
 </head>
 <body>
-<h1 id="Information">Information</h1>
+<h1 id="Information">Deathrun Information</h1>
 
 <h3 id="How.To.Play">How To Play</h3>
 
