--- a/deathruninfo.html
+++ b/deathruninfo.html
@@ -343,5 +343,10 @@ kbd {
 <li>Be nice to your fellow players.</li>
 </ul>
 
+<h3 id="Links">Links</h3>
+<ul>
+	<li><a href="http://steamcommunity.com/groups/vhs7"></a>Join the developer's steam group here.</a></li>
+</ul>
+
 </body>
 </html>
