--- a/deathruninfo.html
+++ b/deathruninfo.html
@@ -345,7 +345,7 @@ kbd {
 
 <h3 id="Links">Links</h3>
 <ul>
-	<li><a href="http://steamcommunity.com/groups/vhs7" onclick="console.log('RUNLUA:OpenSteamGroup()')">Join the developer's steam group here.</a></li>
+	<li><a href="#" onclick="console.log('RUNLUA:OpenSteamGroup()')">Join the developer's steam group here.</a></li>
 </ul>
 
 </body>
