--- a/vhs7.html
+++ b/vhs7.html
@@ -91,7 +91,7 @@ body {
 }
 
 #commits {
-	font-family: "Franklin Gothic";
+	font-family: Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	color: #fff;
 
