--- a/overlay.html
+++ b/overlay.html
@@ -54,6 +54,7 @@ body {
 	
 	<div style="">
 		<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
+		<img class="moving-scanline" width="100%" height="110%" src="http://i.imgur.com/JicOwjF.png">
 	</div>
 	
 </body>
