--- a/overlay.html
+++ b/overlay.html
@@ -8,11 +8,6 @@ body {
   overflow: hidden;
   background-size: cover;
   background-position-x: 55%; 
-
-  animation: glitch 10s infinite;
-  -webkit-animation: glitch 10s infinite;
-  animation-timing-function: linear;
-  animation-direction: alternate;
 }
 
 .logo {
@@ -37,6 +32,12 @@ body {
 
 	animation: movescan 3s infinite;
 	animation-timing-function: linear;
+	
+	-webkit-animation: movescan 3s infinite;
+	-webkit-animation-timing-function: linear;
+	
+	-moz-animation: movescan 3s infinite;
+	-moz-animation-timing-function: linear;
 }
 
 @keyframes movescan {
