Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
 <p>Welcome to the place where I keep all my projects and stuff. Mostly for garrysmod. Mostly lua, maybe Unity/C# in future.</p>
 
 <h1>
+<a id="deathrun-neue" class="anchor" href="#deathrun-neue" aria-hidden="true"><span class="octicon octicon-link"></span></a>Deathrun Neue</h1>
+
+<p><img src="http://i.imgur.com/VUSsFoL.png" alt="Deathrun Neue Screenshot"></p>
+
+<p>Deathrun Neue is a comprehensive, feature-rich Deathrun gamemode produced by Arizard with the help of testers such as Zelpa, Impetulio, Baksus (and the Redline Gaming community) and A Faceless Baby. This gamemode comes standard with many popular Deathrun features - such as thirdperson mode, pointshop support (PS 1, PS 2), AFK timers, and a nominate/rtv mapvote system. The gamemode also includes lesser-known features, such as automatic button claiming, custom crosshairs, death avoidance punishments, and trigger zones.</p>
+
+<p>The gamemode also has a focus on customisability, featuring various client-side convars for each player's unique tastes, and also serverside convars to allow owners customize their server's gameplay.</p>
+
+<p><a href="http://facepunch.com/showthread.php?t=1476758">Click here to visit the Facepunch thread</a></p>
+
+<p><a href="https://github.com/Arizard/deathrun">Click here to visit the github repo</a></p>
+
+<h1>
 <a id="redactedhub" class="anchor" href="#redactedhub" aria-hidden="true"><span class="octicon octicon-link"></span></a>RedactedHub</h1>
 
 <p>Redactedhub is a multi-purpose server hub which I created for my community. It features a point system, item store (cosmetic and augmenting), jukebox (using youtube videos as the source), a donation link, as well as 2 spare panels in which I hope to add item trading and an admin control panel.</p>
