--- a/vhs7.html
+++ b/vhs7.html
@@ -6,10 +6,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 <style>
-
 body {
   overflow: hidden;
-  background-image: url("http://i.imgur.com/cYXgQG4.jpg");
+  background-image: url("http://i.imgur.com/icSfiY1.jpg");
   background-color: #000;
   background-size: cover;
   background-position-x: 55%; 
@@ -102,7 +101,11 @@ body {
 	bottom: 8px;
 	margin-left: -200px;
 
-
+	overflow: hidden;
+	height: 600px;
+	margin-top: -300px;
+	top: 50%;
+	
 	background-color: rgba(0,0,0,0.8);
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -134,7 +137,6 @@ body {
 		top: 0%;
 	}
 }
-
 </style>
 </head><body>
 
