--- a/vhs7.html
+++ b/vhs7.html
@@ -97,14 +97,9 @@ body {
 	position: absolute;
 
 	width: 400px;
-	left: 50%;
-	bottom: 8px;
-	margin-left: -200px;
 
 	overflow: hidden;
-	height: 500px;
-	margin-top: -250px;
-	top: 50%;
+	height: 100%;
 	
 	background-color: rgba(0,0,0,0.8);
 	-moz-box-sizing: border-box;
@@ -114,6 +109,9 @@ body {
 	padding-right: 16px;
 	padding-left: 16px;
 	padding-top: 0px;
+	
+	right: 0px;
+	bottom: 0px;
 
 }
 
@@ -143,7 +141,7 @@ body {
 	
 	<div style="">
 		<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
-		<img class="logo" src="http://i.imgur.com/jhys3mN.png">
+		<img class="logo" src="http://i.imgur.com/iFnpBdM.png">
 		<img class="moving-scanline" width="100%" height="110%" src="http://i.imgur.com/JicOwjF.png">
 	</div>
 
