--- a/vhs7.html
+++ b/vhs7.html
@@ -163,6 +163,8 @@ body {
 		{
 			$("#commits").append( "<p class='commitbox'><span class='commitdate'>" + data[i]["commit"]["committer"]["date"] + "</span><br><span class='commitmessage'>" + data[i]["commit"]["message"] + "</span></p>" );
 		}
+		
+		$("#commits").append("<p>Visit the <b>github.com/Arizard/deathrun</b> to get this gamemode!</p>");
 	});
 </script>
 
