Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -43,6 +43,8 @@
 
 <h1>
 <a id="redactedhub" class="anchor" href="#redactedhub" aria-hidden="true"><span class="octicon octicon-link"></span></a>RedactedHub</h1>
+
+<p><img src="https://camo.githubusercontent.com/0d041179bfec49c89ba2bf255d47383523bc733a/687474703a2f2f692e696d6775722e636f6d2f6d6756444f76722e6a7067" alt=""></p>
 
 <p>Redactedhub is a multi-purpose server hub which I created for my community. It features a point system, item store (cosmetic and augmenting), jukebox (using youtube videos as the source), a donation link, as well as 2 spare panels in which I hope to add item trading and an admin control panel.</p>
 
