Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 <p>The jukebox features a playlist (which changes depending on the server you are on) and a queue, which stores songs that you have added from the playlist. If a song is added to your queue, you will still be able to listen to it if you join another server with RedactedHub installed - the queue is stored on your client and remains the same regardless of the server you are on.</p>
 
+<p><a href="https://github.com/Arizard/redactedhub">View more screenshots and see the (somewhat messy) code here!</a></p>
+
 <h1>
 <a id="scriptfodder" class="anchor" href="#scriptfodder" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scriptfodder</h1>
 
