--- a/vhs7.html
+++ b/vhs7.html
@@ -8,7 +8,7 @@
 <style>
 body {
   overflow: hidden;
-  background-image: url("http://i.imgur.com/icSfiY1.jpg");
+  background-image: url("http://i.imgur.com/N7IxYdi.png");
   background-color: #000;
   background-size: cover;
   background-position-x: 55%; 
