--- a/vhs7.html
+++ b/vhs7.html
@@ -156,6 +156,8 @@ body {
 				<li>Added Magenta, Cyan, and Sonic Blue trails/colours</li>
 				<li>Added 24 taunts, including DJ Khaled, Arnold Schwarzenegger, and Liberty Prime</li>
 				<li>Reduced taunt cooldown to 15 seconds</li>
+				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store</li>
+				<li>Damage is scaled up to 1.25x when moving at speeds over 250u/s <i>[this may change in future]</i></li>
 			</ul>
 		</div>
 	</div>
