--- a/vhs7.html
+++ b/vhs7.html
@@ -89,10 +89,15 @@ body {
 	animation-timing-function: linear;
 }
 
+#commits li {
+	margin-bottom: 4px
+}
+
 #commits {
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Roboto, Arial, sans-serif;
 	font-size: 16px;
-	color: #fff;
+	color: #ff00ff;
+	text-shadow: 0.5px 0.5px #008585;
 
 	position: absolute;
 
@@ -147,7 +152,7 @@ body {
 
 	<div style="position: absolute; width: 100%; height: 100%; left: 0px; top: 0px;">
 		<div id="commits">
-			<h3>December 2015</h3>
+			<h2>December 2015</h2>
 			<ul>
 				<li>Added DJ Snake, ZHU to jukebox</li>
 				<li>Players with VHS7 in their name will emit a sleigh bell noise when they walk</li>
