--- a/vhs7.html
+++ b/vhs7.html
@@ -96,8 +96,9 @@ body {
 #commits {
 	font-family: Roboto, Arial, sans-serif;
 	font-size: 16px;
-	color: #ff00ff;
-	text-shadow: 0.5px 0.5px #008585;
+	color:#fff;
+	background: -moz-linear-gradient(#ff00ff, #00ffff);
+	background: -webkit-linear-gradient(#ff00ff, #00ffff);
 
 	position: absolute;
 
