--- a/vhs7.html
+++ b/vhs7.html
@@ -20,19 +20,19 @@ body {
 
 @keyframes glitch {
 	0% {
-		background-image: url("http://i.imgur.com/cYXgQG4.jpg");
+		background-image: url("http://i.imgur.com/N7IxYdi.png");
 	}
 	49% {
-		background-image: url("http://i.imgur.com/cYXgQG4.jpg");
+		background-image: url("http://i.imgur.com/N7IxYdi.png");
 	}
 	50% {
 		background-image: none;
 	}
 	51% {
-		background-image: url("http://i.imgur.com/cYXgQG4.jpg");
+		background-image: url("http://i.imgur.com/N7IxYdi.png");
 	}
 	100% {
-		background-image: url("http://i.imgur.com/cYXgQG4.jpg");
+		background-image: url("http://i.imgur.com/N7IxYdi.png");
 	}
 }
 
