--- a/vhs7.html
+++ b/vhs7.html
@@ -164,6 +164,7 @@ body {
 				<li>Reduced taunt cooldown to 15 seconds</li>
 				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store</li>
 				<li>Damage is scaled up to 1.25x when moving at speeds over 250u/s <i>[this may change in future]</i></li>
+				<li>Added Angel Wings to the store for 300VC</li>
 			</ul>
 		</div>
 	</div>
