--- a/vhs7.html
+++ b/vhs7.html
@@ -165,6 +165,7 @@ body {
 				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store</li>
 				<li>Damage is scaled up to 1.25x when moving at speeds over 250u/s <i>[this may change in future]</i></li>
 				<li>Added Angel Wings to the store for 300VC</li>
+				<li>New players now get a 650VC bonus for joining the server. (current players will also get this bonus)</li>
 			</ul>
 		</div>
 	</div>
