--- a/vhs7.html
+++ b/vhs7.html
@@ -141,10 +141,30 @@ body {
 		top: 0%;
 	}
 }
+#tip {
+	width: 600px;
+	height: 140px;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 32px;
+	font-weight: bold;
+	font-style: italic;
+	color:#ff65ff;
+	text-shadow: 1px 1px #00ffff;
+	
+	position:absolute;
+	top:135px;
+	left:8px;
+	
+	padding: 10px;
+	box-sizing: border-box;
+	padding-top: 0px;
+}
 </style>
 </head><body>
 
-	
+	<div id="tip">
+		<p>Add VHS7 to anywhere in your steam name to earn <b>double</b> VaporCredits (VC)!</p>
+	</div>
 	<div style="">
 		<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
 		<img class="logo" src="http://i.imgur.com/iFnpBdM.png">
