--- a/vhs7.html
+++ b/vhs7.html
@@ -163,7 +163,7 @@ body {
 </head><body>
 
 	<div id="tip">
-		<p>Add VHS7 to anywhere in your steam name to earn <b>double</b> VaporCredits (VC)!</p>
+		<p>Add VHS7 anywhere in your steam name to earn <b>double</b> VaporCredits (VC)!</p>
 	</div>
 	<div style="">
 		<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
