--- a/vhs7.html
+++ b/vhs7.html
@@ -159,9 +159,16 @@ body {
 	box-sizing: border-box;
 	padding-top: 0px;
 }
+#meme {
+	position:absolute;
+	bottom: 16px;
+	left: 16px;
+}
 </style>
 </head><body>
-
+	<div id="meme">
+		<img src="https://i.imgur.com/CnM2UXm.jpg" width="300px">
+	</div>
 	<div id="tip">
 		<p>Add VHS7 anywhere in your steam name to earn <b>double</b> VaporCredits (VC)!</p>
 	</div>
