--- a/vhs7.html
+++ b/vhs7.html
@@ -186,14 +186,12 @@ body {
 				<li>Players with VHS7 in their name will emit a sleigh bell noise when they walk</li>
 				<li>Added deathrun_atomic_warfare_gmod</li>
 				<li>Temporarily removed jukebox "now playing" message</li>
-				<li>Added Magenta, Cyan, and Sonic Blue trails/colours</li>
-				<li>Added 24 taunts, including DJ Khaled, Arnold Schwarzenegger, and Liberty Prime</li>
 				<li>Reduced taunt cooldown to 15 seconds</li>
 				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store</li>
 				<li>Damage is scaled up to 1.25x when moving at speeds over 250u/s <i>[this may change in future]</i></li>
-				<li>Added Angel Wings to the store for 300VC</li>
 				<li>New players now get a 650VC bonus for joining the server. (current players will also get this bonus)</li>
 				<li>Added several highly rated maps such as Dissolution and TP_Percolate_Oreo</li>
+				<li>Added Angel Wings, 24 taunts, 3 new colours, 3 new trails, 2 new materials to the store</li>
 			</ul>
 		</div>
 	</div>
