--- a/vhs7.html
+++ b/vhs7.html
@@ -192,6 +192,7 @@ body {
 				<li>New players now get a 650VC bonus for joining the server. (current players will also get this bonus)</li>
 				<li>Added several highly rated maps such as Dissolution and TP_Percolate_Oreo</li>
 				<li>Added Angel Wings, 24 taunts, 3 new colours, 3 new trails, 2 new materials to the store</li>
+				<li>Added playtime tracker</li>
 			</ul>
 		</div>
 	</div>
