--- a/vhs7.html
+++ b/vhs7.html
@@ -182,17 +182,14 @@ body {
 		<div id="commits">
 			<h2>December 2015</h2>
 			<ul>
-				<li>Added DJ Snake, ZHU to jukebox</li>
-				<li>Players with VHS7 in their name will emit a sleigh bell noise when they walk</li>
 				<li>Added deathrun_atomic_warfare_gmod</li>
-				<li>Temporarily removed jukebox "now playing" message</li>
 				<li>Reduced taunt cooldown to 15 seconds</li>
 				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store</li>
-				<li>Damage is scaled up to 1.25x when moving at speeds over 250u/s <i>[this may change in future]</i></li>
 				<li>New players now get a 650VC bonus for joining the server. (current players will also get this bonus)</li>
 				<li>Added several highly rated maps such as Dissolution and TP_Percolate_Oreo</li>
 				<li>Added Angel Wings, 24 taunts, 3 new colours, 3 new trails, 2 new materials to the store</li>
 				<li>Added playtime tracker</li>
+				<li>Added the <i>Summer Lovin'</i> crate which contains burgerhat, gold, chrome, and angel wings!</li>
 			</ul>
 		</div>
 	</div>
