--- a/vhs7.html
+++ b/vhs7.html
@@ -190,6 +190,7 @@ body {
 				<li>Added Angel Wings, 24 taunts, 3 new colours, 3 new trails, 2 new materials to the store</li>
 				<li>Added playtime tracker</li>
 				<li>Added the <i>Summer Lovin'</i> crate which contains burgerhat, gold, chrome, and angel wings!</li>
+				<li>Added the <i>Developer</i> crate for a bunch of glitchy, computery goodies, such as the Download Failed material and the Missing trail!</li>
 			</ul>
 		</div>
 	</div>
