--- a/vhs7.html
+++ b/vhs7.html
@@ -170,7 +170,7 @@ body {
 		<img src="https://i.imgur.com/CnM2UXm.jpg" width="300px">
 	</div>
 	<div id="tip">
-		<p>Add VHS7 anywhere in your steam name to earn <b>double</b> VaporCredits (VC)!</p>
+		<p>Add VHS7 anywhere in your steam name to earn <b>double</b> VaporCredits (VC) and find <b>twice</b> as many crates!</p>
 	</div>
 	<div style="">
 		<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
@@ -184,7 +184,7 @@ body {
 			<ul>
 				<li>Added deathrun_atomic_warfare_gmod</li>
 				<li>Reduced taunt cooldown to 15 seconds</li>
-				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store</li>
+				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store and <b>doubles</b> your chances of finding crates!</i></li>
 				<li>New players now get a 650VC bonus for joining the server. (current players will also get this bonus)</li>
 				<li>Added several highly rated maps such as Dissolution and TP_Percolate_Oreo</li>
 				<li>Added Angel Wings, 24 taunts, 3 new colours, 3 new trails, 2 new materials to the store</li>
