--- a/vhs7.html
+++ b/vhs7.html
@@ -191,6 +191,7 @@ body {
 				<li>Added playtime tracker</li>
 				<li>Added the <i>Summer Lovin'</i> crate which contains burgerhat, gold, chrome, and angel wings!</li>
 				<li>Added the <i>Developer</i> crate for a bunch of glitchy, computery goodies, such as the Download Failed material and the Missing trail!</li>
+				<li>Added the <i>Hairstyle</i> crate for a bunch of silly, suave and sexy hairstyles, including the Gold Mohawk and Ice Shoulder-length!</i></li>
 			</ul>
 		</div>
 	</div>
