--- a/vhs7.html
+++ b/vhs7.html
@@ -196,6 +196,8 @@ body {
 		</div>
 	</div>
 	
+	<iframe width="122" height="0" src="https://www.youtube.com/embed/nidFjWK8rik?autoplay=1" frameborder="0" autoplay="1" allowfullscreen></iframe>
+	
 </body>
 
 </html>
