--- a/vhs7.html
+++ b/vhs7.html
@@ -8,32 +8,10 @@
 <style>
 body {
   overflow: hidden;
-  background-image: url("http://i.imgur.com/N7IxYdi.png");
+  background-image: url("http://i.imgur.com/JPj1LWD.jpg");
   background-color: #000;
   background-size: cover;
   background-position-x: 55%; 
-
-  animation: glitch 10s infinite;
-  animation-timing-function: linear;
-  animation-direction: alternate;
-}
-
-@keyframes glitch {
-	0% {
-		background-image: url("http://i.imgur.com/N7IxYdi.png");
-	}
-	49% {
-		background-image: url("http://i.imgur.com/N7IxYdi.png");
-	}
-	50% {
-		background-image: none;
-	}
-	51% {
-		background-image: url("http://i.imgur.com/N7IxYdi.png");
-	}
-	100% {
-		background-image: url("http://i.imgur.com/N7IxYdi.png");
-	}
 }
 
 .logo {
