--- a/vhs7.html
+++ b/vhs7.html
@@ -6,12 +6,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 <style>
+
 body {
   overflow: hidden;
   background-image: url("http://i.imgur.com/JPj1LWD.jpg");
   background-color: #000;
-  background-size: cover;
-  background-position-x: 55%; 
+  background-size: contain;
+  background-position: 0% 0%; 
 }
 
 .logo {
@@ -142,6 +143,7 @@ body {
 	bottom: 16px;
 	left: 16px;
 }
+
 </style>
 </head><body>
 	<div id="meme">
