--- a/vhs7.html
+++ b/vhs7.html
@@ -162,16 +162,10 @@ body {
 		<div id="commits">
 			<h2>December 2015</h2>
 			<ul>
-				<li>Added deathrun_atomic_warfare_gmod</li>
-				<li>Reduced taunt cooldown to 15 seconds</li>
-				<li>Adding VHS7 to your name will earn you <b>double</b> VC for use in the store and <b>doubles</b> your chances of finding crates!</i></li>
-				<li>New players now get a 650VC bonus for joining the server. (current players will also get this bonus)</li>
-				<li>Added several highly rated maps such as Dissolution and TP_Percolate_Oreo</li>
-				<li>Added Angel Wings, 24 taunts, 3 new colours, 3 new trails, 2 new materials to the store</li>
-				<li>Added playtime tracker</li>
-				<li>Added the <i>Summer Lovin'</i> crate which contains burgerhat, gold, chrome, and angel wings!</li>
-				<li>Added the <i>Developer</i> crate for a bunch of glitchy, computery goodies, such as the Download Failed material and the Missing trail!</li>
-				<li>Added the <i>Hairstyle</i> crate for a bunch of silly, suave and sexy hairstyles, including the Gold Mohawk and Ice Shoulder-length!</i></li>
+				<li>Added deathrun_emerald_a3</li>
+				<li>Added The Logbook, a place where you can post whatever you like for everyone to see. Type !logbook</li>
+				<li>Added daily rewards - log in every 24 hours to claim over 300 VC per week!</li>
+				<li>Added Daft Punk helmets to the Summer Lovin' crate</li>
 			</ul>
 		</div>
 	</div>
