--- a/vhs7.html
+++ b/vhs7.html
@@ -166,6 +166,7 @@ body {
 				<li>Added The Logbook, a place where you can post whatever you like for everyone to see. Type !logbook</li>
 				<li>Added daily rewards - log in every 24 hours to claim over 300 VC per week!</li>
 				<li>Added Daft Punk helmets to the Summer Lovin' crate</li>
+				<li>You can now only hold one primary and one secondary weapon</li>
 			</ul>
 		</div>
 	</div>
