--- a/vhs7.html
+++ b/vhs7.html
@@ -147,7 +147,7 @@ body {
 </style>
 </head><body>
 	<div id="meme">
-		<img src="https://i.imgur.com/CnM2UXm.jpg" width="300px">
+		<img src="http://i.imgur.com/LUvDTDu.png" width="300px">
 	</div>
 	<div id="tip">
 		<p>Add VHS7 anywhere in your steam name to earn <b>double</b> VaporCredits (VC) and find <b>twice</b> as many crates!</p>
