--- a/vhs7.html
+++ b/vhs7.html
@@ -9,7 +9,7 @@
 
 body {
   overflow: hidden;
-  background-image: url("http://i.imgur.com/JPj1LWD.jpg");
+  background-image: url("http://i.imgur.com/8FFLv6o.jpg");
   background-color: #000;
   background-size: contain;
   background-position: 0% 0%; 
