--- a/vhs7.html
+++ b/vhs7.html
@@ -8,11 +8,14 @@
 <style>
 
 body {
+  position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;	
   overflow: hidden;
-  background-image: url("http://i.imgur.com/8FFLv6o.jpg");
-  background-color: #000;
-  background-size: contain;
-  background-position: 0% 0%; 
+  background: url("http://i.imgur.com/8FFLv6o.jpg");
+	background-size: auto 1080px;
 }
 
 .logo {
