--- a/ttt.html
+++ b/ttt.html
@@ -9,7 +9,7 @@
 
 body {
   overflow: hidden;
-  background: url("http://i.imgur.com/8FFLv6o.jpg");
+  background: url("http://a.pomf.cat/dambeo.jpg");
 	background-size: auto 1080px;
 }
 
