--- a/ttt.html
+++ b/ttt.html
@@ -11,6 +11,7 @@ body {
   overflow: hidden;
   background: url("http://a.pomf.cat/dambeo.jpg");
 	background-size: auto 1080px;
+	background-position: center top;
 }
 
 .logo {
