--- a/ttt.html
+++ b/ttt.html
@@ -139,13 +139,18 @@ body {
 }
 #meme {
 	position:absolute;
-	bottom: 16px;
-	left: 16px;
+	top: 16px;
+	left: 50%;
+	margin-left: -200px;
+	width: 400px;
+	
 }
 
 </style>
 </head><body>
-	
+	<div id="meme">
+		<img src="http://a.pomf.cat/qwkkza.png" width="400px">
+	</div>
 	<!--<div id="tip">
 		<p>Add VHS7 anywhere in your steam name to earn <b>double</b> VaporCredits (VC) and find <b>twice</b> as many crates!</p>
 	</div>!-->
