--- a/vhs7.html
+++ b/vhs7.html
@@ -165,6 +165,7 @@ body {
 				<li>Added daily rewards - log in every 24 hours to claim over 300 VC per week!</li>
 				<li>Added Daft Punk helmets to the Summer Lovin' crate</li>
 				<li>You can now only hold one primary and one secondary weapon</li>
+				<li>Improved fall damage so that it's very close to CS:S (marioworld is doable now)</li>
 			</ul>
 		</div>
 	</div>
