--- a/ttt.html
+++ b/ttt.html
@@ -148,9 +148,9 @@ body {
 
 </style>
 </head><body>
-	<div id="meme">
-		<img src="http://a.pomf.cat/qwkkza.png" width="400px">
-	</div>
+	<!--<div id="meme">-->
+	<!--	<img src="http://a.pomf.cat/qwkkza.png" width="400px">-->
+	<!--</div>-->
 	<!--<div id="tip">
 		<p>Add VHS7 anywhere in your steam name to earn <b>double</b> VaporCredits (VC) and find <b>twice</b> as many crates!</p>
 	</div>!-->
