--- a/ttt.html
+++ b/ttt.html
@@ -173,7 +173,12 @@ body {
 		</div>
 	</div>!-->
 	
-	
+	<audio id="music" src="http://a.pomf.cat/ozfdmi.mp3" autoplay>
+		
+	</audio>
+	<script>
+		document.getElementByID("music").volume = 0.25;
+	</script>
 	
 </body>
 
