--- a/ttt.html
+++ b/ttt.html
@@ -177,7 +177,7 @@ body {
 		
 	</audio>
 	<script>
-		document.getElementByID("music").volume = 0.25;
+		$('#music').prop("volume", 0.1);
 	</script>
 	
 </body>
