vhs7.html layout

--- a/vhs7.html
+++ b/vhs7.html
@@ -11,7 +11,7 @@ body {
   overflow: hidden;
   background: url("http://i.imgur.com/8FFLv6o.jpg");
 	background-size: auto 1080px;
-	color: #FFFDE6;
+	color: #FF5150;
 }
 
 .logo {
@@ -44,8 +44,7 @@ body {
 #commits {
 	font-family: Roboto, Arial, sans-serif;
 	font-size: 16px;
-	color:#fff;
-	background: #FF5150;
+	color: #FFFDE6;
 
 	position: absolute;
 
@@ -62,9 +61,16 @@ body {
 	padding-left: 16px;
 	padding-top: 0px;
 	
-	right: 0px;
+	right: 32px;
 	bottom: 0px;
 
+}
+
+#commits p {
+	background: #FF5150;
+	color: #FFFDE6;
+	padding: 4px;
+	margin-top: -8px;
 }
 
 .commitbox {
@@ -131,15 +137,12 @@ body {
 
 	<div style="position: absolute; width: 100%; height: 100%; left: 0px; top: 0px;">
 		<div id="commits">
-			<h2>December 2015</h2>
-			<ul>
-				<li>Added deathrun_emerald_a3</li>
-				<li>Added The Logbook, a place where you can post whatever you like for everyone to see. Type !logbook</li>
-				<li>Added daily rewards - log in every 24 hours to claim over 300 VC per week!</li>
-				<li>Added Daft Punk helmets to the Summer Lovin' crate</li>
-				<li>You can now only hold one primary and one secondary weapon</li>
-				<li>Improved fall damage so that it's very close to CS:S (marioworld is doable now)</li>
-			</ul>
+			<h2>January 2016</h2>
+				<p>Improved fall damage so that it's very close to CS:S (marioworld is doable now)</p>
+				<p>Added TEXT HATS for VIP players. Type !donate to support the server and contact a superadmin afterwards to get VIP!</p>
+				<p>Text hats have customisable colors, fonts, and effects!</p>
+				<p>New colour scheme!</p>
+				<p>You can now zoom in and out in the Hub playermodel preview</p>
 		</div>
 	</div>
 	
