--- a/ttt.html
+++ b/ttt.html
@@ -9,46 +9,26 @@
 
 body {
   overflow: hidden;
-  background: url("http://a.pomf.cat/dambeo.jpg");
-	background-size: auto 1080px;
-	background-position: center top;
+  background: url("http://i.imgur.com/q7Lg1Oc.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+	
+	height: 100%;
+	position: absolute;
+	width: 100%;
+	left: 0px;
+	top: 0px;
+	padding: 0;
+	margin: 0;
+	-o-background-size: cover;
 }
 
 .logo {
-
-	animation: logoflicker 3.5s infinite;
-  	animation-timing-function: linear;
-}
-
-
-@keyframes logoflicker {
-	0% {
-		opacity: 1;
-	}
-	25% {
-		opacity: 1;
-	}
-	26% {
-		opacity: 0;
-	}
-	26.5% {
-		opacity: 1;
-	}
-	95% {
-		width: auto;
-		height: auto;
-	}
-	96% {
-		width: 100%;
-		height: 20%;
-	}
-	96.5% {
-		width: auto;
-		height: auto;
-	}
-	100% {
-		opacity: 1;
-	}
+	height: 155px;
+	margin-left: 32px;
+	margin-top: 8px;
 }
 
 .screen-border {
@@ -156,7 +136,7 @@ body {
 	</div>!-->
 	<div style="">
 		<img class="screen-border" width="100%" height="100%" src="http://i.imgur.com/GRwTNJi.png">
-		<img class="logo" src="http://i.imgur.com/iFnpBdM.png">
+		<img class="logo" src="http://i.imgur.com/9o0VCIo.png">
 		<img class="moving-scanline" width="100%" height="110%" src="http://i.imgur.com/JicOwjF.png">
 	</div>
 
