changed ttt loading screen sound

--- a/ttt.html
+++ b/ttt.html
@@ -153,11 +153,11 @@ body {
 		</div>
 	</div>!-->
 	
-	<audio id="music" src="http://a.pomf.cat/ozfdmi.mp3" autoplay>
+	<audio id="music" src="https://d.maxfile.ro/fbommnnbsw.ogg" autoplay>
 		
 	</audio>
 	<script>
-		$('#music').prop("volume", 0.1);
+		$('#music').prop("volume", 0.6);
 	</script>
 	
 </body>
